# aes-gcm-siv

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Package.swift  README.md
.github/workflows/: clang-format.yaml  memcheck.yaml  unit_tests.yaml
android/: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
android/aesgcmsiv/: build.gradle  proguard-rules.pro
android/aesgcmsiv/src/androidTest/java/com/linecorp/aesgcmsiv/: AESGCMSIVExample.java  AESGCMSIVTest.java
android/aesgcmsiv/src/main/java/com/linecorp/aesgcmsiv/: AESGCMSIV.java
android/gradle/wrapper/: gradle-wrapper.properties
java/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
java/aesgcmsiv/: build.gradle
java/aesgcmsiv/src/main/java/com/linecorp/aesgcmsiv/: AESGCMSIV.java  ResourceLoader.java
java/aesgcmsiv/src/test/java/com/linecorp/aesgcmsiv/: AESGCMSIVExample.java  AESGCMSIVTest.java
jni/: CMakeLists.txt  aesgcmsiv_jni.c  aesgcmsiv_jni.h
lib/: CMakeLists.txt  README.md
lib/benchmark/: CMakeLists.txt  googlebenchmark.cmake  main.cpp
lib/example/: CMakeLists.txt  main.c
lib/include/: aes_gcmsiv.h  common.h  utils.h
lib/src/: aes_gcmsiv.c  utils.c
lib/src/arm64/: aes_arm64.c  aes_arm64.h  polyval_arm64.c  polyval_arm64.h
lib/src/generic/: aes_generic.c  aes_generic.h  aes_generic_tables.h  aes_mbedtls.c  aes_mbedtls.h  polyval_generic.c  polyval_generic.h
lib/src/x86_64/: aes_x86_64.c  aes_x86_64.h  polyval_x86_64.c  polyval_x86_64.h
lib/tests/: CMakeLists.txt  googletest.cmake
lib/tests/thread_safe/: CMakeLists.txt  main.c
lib/tests/unit_tests/: CMakeLists.txt  api.cpp  kat.cpp  main.cpp  thirdparty_kat.cpp  utils.cpp  utils.h
tests/: test_invariant_aesgcmsiv_jni.py
